# 1.09.02 (53443) Jun 23, 2011
# 1.09.01 (53286) Jun 20, 2011
Improved faucet image and metrics
Improved translations for plural strings "One Speaker/Two Speakers" and "One Light/Two Lights", see #2880
Refactored measuring tape to facilitate resetting
# 1.09.00 (40820) May 17, 2010
# 1.09.00 (40819) May 17, 2010
# 1.08.04 (40818) May 17, 2010
# 1.08.03 (40807) May 17, 2010
> Removed developer controls from the Sound tab's control panel, resolves #2351
# 1.08.02 (40758) May 14, 2010
# 1.08.01 (39460) Mar 22, 2010
> Standardized window size on startup to be 1024x768, see #2102
# 1.08.00 (38037) Jan 11, 2010
1/11/10 public version for milestone "full redeploy, 2010 Q1"
# 1.07.01 (37385) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.07.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 1.06.05 (30536) Apr 18, 2009
4/18/09 Publish version for testing #1404
# 1.06.04 (30355) Apr 10, 2009
4/10/09 Fixed rendering problems on mac, see #1404
# 1.06.03 (30186) Apr 1, 2009
> Determined time units and scaling factors to make sure sound and light have approximately the right speeds, at least for the default wavelength and frequency, see #1479
# 1.06.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.06.01 (28825) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
#
Made slits equal size, see #884

# 1.06 11-5-2008
>Waves are now in phase after using a single pulse

10-13-2008: [811] use PhetApplicationConfig
1.05.02
Trial version with particles in every cell

1.05.02
Trial version with particles in every 2 cells

1.05.00 (5-7-08)
Same as 1.04.01, to pick up translation fixes in PhetDefaultFont.

New in 1.04.01 (4-28-08)
Picked up fixes in PhetDefaultFont


10-5-2007: reduced padding between components to remove scrollbars at 1024x768
10-5-2007: reduced barrier thickness
10-5-2007: reduced graph size slightly