@@ -40,7 +40,8 @@ public class WaterSimulationPanel extends WaveInterferenceCanvas implements Mode
     private WaveInterferenceScreenUnits screenUnits;
     //    private boolean maximized = false;
     private WaveModelGraphic waveModelGraphic;
-//    private ThisSideUpGraphic thisSideUpGraphic;
+    private CompositeWallPotentialGraphic wallPotentialGraphic;
+    //    private ThisSideUpGraphic thisSideUpGraphic;
 
     public WaterSimulationPanel( WaterModule waterModule ) {
         this.waterModule = waterModule;
@@ -64,7 +65,8 @@ public class WaterSimulationPanel extends WaveInterferenceCanvas implements Mode
         addScreenChild( new BarrierSideView( waterModule.getSlitPotential(), getLatticeScreenCoordinates(), waveSideView ) );//not a part of the wavesideview so coordinates will be easier, and z-order will be easier
 
         addScreenChild( rotationWaveGraphic );
-        addScreenChild( new CompositeWallPotentialGraphic( this, waterModule.getWallPotentials(), getLatticeScreenCoordinates(), rotationWaveGraphic ) );
+        wallPotentialGraphic = new CompositeWallPotentialGraphic( this, waterModule.getWallPotentials(), getLatticeScreenCoordinates(), rotationWaveGraphic );
+        addScreenChild( wallPotentialGraphic );
         rotationWaveGraphic.setPickable( false );
         rotationWaveGraphic.setChildrenPickable( false );
 
@@ -225,6 +227,7 @@ public class WaterSimulationPanel extends WaveInterferenceCanvas implements Mode
         expandableWaveChart.reset();
         multiFaucetDrip.reset();
         measurementToolSet.reset();
+        wallPotentialGraphic.reset();
     }
 
 }
